[package]
name = "sticker-download-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
zip = "0.6.2"
bytes = "1.1"
tokio = { version = "1.18", features = ["rt"] }
futures = "0.3.21"
teloxide = {version = "0.9.0", features = ["throttle"] }
pretty_env_logger = "0.4.0"
pin-project = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.80"

uuid = { version = "1.0", features = ["v4"] }

unicode-segmentation = "1.9"
emojis = "0.4.0"

bytemuck = "1.9.1"
libwebp = "0.1.2"
lodepng = "3.6.2"
jpeg-encoder = "0.5.1"
fast_image_resize = "0.9.3"